--- a/Intro.html
+++ b/Intro.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-<!-- So traditionally we have a property selector and whatever the value you want it to be -->
-    selector{property: value;} # We call this a declaration
+    selector{property: value;} 
     </style>
 </head>
 <body style='color: red;'> 
@@ -14,3 +13,4 @@
 </body>
 </html>
 <!-- Style can be embedded within the element tag, or can be nested in one of the elements -->
+<!-- So traditionally we have a property selector and whatever the value you want it to be and we call this a declaration
